Adding new templates