@@ -14,24 +14,27 @@ public class Pb4jCommandTest {
 
     @Test
     public void testWithCommandLineOption() throws Exception {
-        File protoFolder = new File("/Users/vinnyc/tmp/proto-sample/micronaut");
-        List<String> commands = new LinkedList<>();
-        commands.add("./gradlew");
-        commands.add("-Dorg.gradle.daemon.debug=true");
-        commands.add("build");
-        ProcessBuilder processBuilder = new ProcessBuilder(commands);
-        processBuilder.directory(new File(protoFolder, "java-project"));
-        Process process = processBuilder.start();
-        InputStream is = process.getInputStream();
-        InputStreamReader isr = new InputStreamReader(is);
-        BufferedReader br = new BufferedReader(isr);
-        String line;
-        System.out.println("Output of running");
-        while ((line = br.readLine()) != null) {
-            System.out.println(line);
-        }
-        int exitCode = process.waitFor();
-        System.out.println("Exit code :" + exitCode);
+        Process process = Runtime.getRuntime().exec("/Users/vinnyc/tmp/proto-sample/micronaut/java-project/gradlew build");
+        process.waitFor();
+
+//        File protoFolder = new File("/Users/vinnyc/tmp/proto-sample/micronaut/java-project/gradlew");
+//        List<String> commands = new LinkedList<>();
+//        commands.add("./gradlew");
+//        commands.add("-Dorg.gradle.daemon.debug=true");
+//        commands.add("build");
+//        ProcessBuilder processBuilder = new ProcessBuilder(commands);
+//        processBuilder.directory(new File(protoFolder, "java-project"));
+//        Process process = processBuilder.start();
+//        InputStream is = process.getInputStream();
+//        InputStreamReader isr = new InputStreamReader(is);
+//        BufferedReader br = new BufferedReader(isr);
+//        String line;
+//        System.out.println("Output of running");
+//        while ((line = br.readLine()) != null) {
+//            System.out.println(line);
+//        }
+//        int exitCode = process.waitFor();
+//        System.out.println("Exit code :" + exitCode);
     }
 
 
